css changes for navbar to stop leak of title when viewed on mobile

--- a/styles/game.module.css
+++ b/styles/game.module.css
@@ -1,8 +1,13 @@
 .individualGameMain {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   column-gap: 1rem;
   row-gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .individualGameMain {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .mainImage {
@@ -15,7 +20,7 @@
 }
 
 .gameDescription {
-  padding-top: 10px;
+  margin-top: 10px;
 }
 
 .gameDescriptionTitle {
