--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,8 @@
-.background {
+.container {
   display: flex;
-  height: 6rem;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
   justify-content: space-between;
   background-color: #141010;
 }
